# navigation2

nav2_behavior_tree/: CMakeLists.txt  nav2_tree_nodes.xml
nav2_behavior_tree/include/nav2_behavior_tree/plugins/action/: compute_path_to_dock_action.hpp  dock_align_action.hpp
nav2_behavior_tree/plugins/action/: compute_path_to_dock_action.cpp  dock_align_action.cpp
nav2_bringup/bringup/launch/: ek_simulation_launch.py
nav2_bringup/bringup/maps/: map_sim.pgm  map_sim.yaml  map_sim_old.pgm
nav2_bringup/bringup/params/: nav2_params.yaml
nav2_bringup/bringup/rviz/: nav2_default_view.rviz
nav2_bringup/bringup/urdf/: model.xacro  modelB.sdf
nav2_bt_navigator/behavior_trees/: navigate_w_replanning_and_recovery.xml  navigate_w_replanning_and_recovery_with_dock.xml  navigate_w_replanning_and_recovery_with_dock_v2.xml
nav2_bt_navigator/src/: bt_navigator.cpp
nav2_dock_align_controller/: CMakeLists.txt  dock_align_controller_plugin.xml  package.xml
nav2_dock_align_controller/include/nav2_dock_align_controller/: common_functions.hpp  dock_align_controller.hpp
nav2_dock_align_controller/src/: common_functions.cpp  dock_align_controller.cpp
