<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_dock_align_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bijay.khanal@ekbana.info">bijay</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>builtin_interfaces</depend> 
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
      <nav2_core plugin="${prefix}/dock_align_controller_plugin.xml" />
  </export>
</package>
